--- a/frontend/src/donate-button-section.html
+++ b/frontend/src/donate-button-section.html
@@ -7,7 +7,7 @@
 <section id="donate-button-section">
   <button
     id="donate-button-section--donate-button"
-    class="mt-8 py-5 px-10 text-white text-md border-none rounded focus-outline"
+    class="mt-8 py-5 px-10 text-white text-md border-none rounded-full focus-outline"
     type="submit"
     value="Donate"
   >
@@ -19,6 +19,14 @@
   class DonateButtonSection {
     constructor() {
       showBlock("#donate-button-section");
+    }
+
+    static show() {
+      showBlock("#donate-button-section");
+    }
+
+    static hide() {
+      hide("#donate-button-section");
     }
   }
 </script>
