--- a/frontend/src/error-section.html
+++ b/frontend/src/error-section.html
@@ -7,7 +7,7 @@
 <section id="error-section">
   <h2 class="text-lg mt-8">Something's gone wrong</h2>
   <p>Please let us know about this issue at info@eaa.org.au</p>
-  <p>Click <a href="/pledge_new/">here</a> to start again.</p>
+  <p>Click <a href="/donate">here</a> to start again.</p>
 </section>
 
 <script>
