--- a/frontend/src/festive-gift-section.html
+++ b/frontend/src/festive-gift-section.html
@@ -23,7 +23,7 @@
         onclick="FestiveGiftSection.handleFestiveGiftSection(event)"
       />
       Yes, this is a gift for the festive season.
-      <div class="checkmark rounded"></div>
+      <div class="checkmark rounded-sm"></div>
     </label>
 
     <fieldset
@@ -55,7 +55,7 @@
           type="text"
           id="festive-gift-section--recipient-name"
           name="festive-gift-recipient-name"
-          class="block w-full p-2 text-md border mt-1 mb-2 rounded focus-outline"
+          class="block w-full p-2 text-md border mt-1 mb-2 rounded-sm focus-outline"
           maxlength="14"
           required
         />
@@ -81,7 +81,7 @@
           type="email"
           id="festive-gift-section--recipient-email"
           name="festive-gift-recipient-email"
-          class="block w-full p-2 text-md border mt-1 mb-2 rounded focus-outline"
+          class="block w-full p-2 text-md border mt-1 mb-2 rounded-sm focus-outline"
           required
         />
       </div>
@@ -105,7 +105,7 @@
         <textarea
           id="festive-gift-section--message"
           name="festive-gift-personal-message"
-          class="block w-full h-20 p-2 text-md block p-2 border mt-1 mb-2 rounded focus-outline"
+          class="block w-full h-20 p-2 text-md block p-2 border mt-1 mb-2 rounded-sm focus-outline"
           maxlength="120"
         ></textarea>
         <!-- TODO: Add character count if time permits -->
