--- a/frontend/src/gift-section.html
+++ b/frontend/src/gift-section.html
@@ -17,7 +17,7 @@
         onclick="this.checked ? showGiftSection() : hideGiftSection();"
       />
       Yes, this is a gift.
-      <div class="checkmark rounded"></div>
+      <div class="checkmark rounded-sm"></div>
     </label>
 
     <fieldset
@@ -32,7 +32,7 @@
           type="text"
           id="gift-section--recipient-name"
           name="gift-section--recipient-name"
-          class="block w-full p-2 text-md border rounded focus-outline"
+          class="block w-full p-2 text-md border rounded-sm focus-outline"
         />
       </div>
 
@@ -42,7 +42,7 @@
           type="email"
           id="gift-section--recipient-email"
           name="gift-section--recipient-email"
-          class="block w-full p-2 text-md border rounded focus-outline"
+          class="block w-full p-2 text-md border rounded-sm focus-outline"
           required
         />
       </div>
@@ -54,7 +54,7 @@
         <textarea
           id="gift-section--gift-message"
           name="gift-section--gift-message"
-          class="block w-full h-20 p-2 text-md block p-2 border rounded focus-outline"
+          class="block w-full h-20 p-2 text-md block p-2 border rounded-sm focus-outline"
         ></textarea>
       </div>
     </fieldset>
