--- a/frontend/src/specific-allocation-section.html
+++ b/frontend/src/specific-allocation-section.html
@@ -70,7 +70,7 @@
           specificAllocationSectionHTML += `
             <div class="flex charity-option">
               <label for="${charity.slug_id}">${charity.name}</label>
-              <span class="flex items-center rounded p-2 text-md border focus-outline">
+              <span class="flex items-center rounded-sm p-2 text-md border focus-outline">
                 $
                 <input
                   type="number"
