--- a/frontend/src/total-amount-section.html
+++ b/frontend/src/total-amount-section.html
@@ -153,5 +153,13 @@
         </tr>`;
       $("#total-amount-section table").innerHTML = table;
     }
+
+    static hide() {
+      hide("#total-amount-section");
+    }
+
+    static show() {
+      showBlock("#total-amount-section");
+    }
   }
 </script>
