--- a/frontend/src/amount-section.html
+++ b/frontend/src/amount-section.html
@@ -15,7 +15,7 @@
       display: flex;
       flex-grow: 1;
       align-items: center;
-      padding-left: 0.5rem;
+      padding-left: 1rem;
       width: 100%;
       background-color: white;
       border: 2px solid var(--eaa-blue-600);
@@ -39,7 +39,7 @@
       value="50"
       onchange="AmountSection.handleSuggestedAmountChange(event)"
     />
-    <label for="amount-section--donate-50" class="rounded text-blue larger-button">$50</label>
+    <label for="amount-section--donate-50" class="rounded-full text-blue larger-button">$50</label>
     <input
       type="radio"
       id="amount-section--donate-100"
@@ -47,7 +47,7 @@
       value="100"
       onchange="AmountSection.handleSuggestedAmountChange(event)"
     />
-    <label for="amount-section--donate-100" class="rounded text-blue larger-button"
+    <label for="amount-section--donate-100" class="rounded-full text-blue larger-button"
       >$100</label
     >
     <input
@@ -57,7 +57,7 @@
       value="250"
       onchange="AmountSection.handleSuggestedAmountChange(event)"
     />
-    <label for="amount-section--donate-250" class="rounded text-blue larger-button"
+    <label for="amount-section--donate-250" class="rounded-full text-blue larger-button"
       >$250</label
     >
     <input
@@ -67,7 +67,7 @@
       value="500"
       onchange="AmountSection.handleSuggestedAmountChange(event)"
     />
-    <label for="amount-section--donate-500" class="rounded text-blue larger-button"
+    <label for="amount-section--donate-500" class="rounded-full text-blue larger-button"
       >$500</label
     >
   </div>
@@ -77,7 +77,7 @@
     >
     <span
       id="amount-section--custom-amount-input-wrapper"
-      class="border rounded focus-outline"
+      class="border rounded-full focus-outline"
     >
       $
       <input
