--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -4,7 +4,7 @@
     padding: 16px;
     background-color: var(--eaa-blue-100);
     border: 1px solid var(--eaa-blue-600);
-    border-radius: 4px;
+    border-radius: 1rem;
     margin-top: 32px;
 
     h2 {
@@ -24,7 +24,7 @@
       display: flex;
       flex-grow: 1;
       align-items: center;
-      padding-left: 0.5rem;
+      padding-left: 1rem;
       width: 100%;
       background-color: white;
     }
@@ -48,7 +48,7 @@
     />
     <label
       for="amplify-impact-section--amount-0"
-      class="flex items-center justify-center rounded text-blue"
+      class="flex items-center justify-center rounded-full text-blue"
     >
       Skip
     </label>
@@ -62,7 +62,7 @@
     />
     <label
       for="amplify-impact-section--amount-5"
-      class="flex items-center justify-center rounded text-blue"
+      class="flex items-center justify-center rounded-full text-blue"
     >
       5%
     </label>
@@ -77,7 +77,7 @@
     />
     <label
       for="amplify-impact-section--amount-10"
-      class="flex items-center justify-center rounded text-blue"
+      class="flex items-center justify-center rounded-full text-blue"
     >
       10%
     </label>
@@ -91,7 +91,7 @@
     />
     <label
       for="amplify-impact-section--amount-20"
-      class="flex items-center justify-center rounded text-blue"
+      class="flex items-center justify-center rounded-full text-blue"
     >
       20%
     </label>
@@ -105,7 +105,7 @@
     />
     <label
       for="amplify-impact-section--amount-30"
-      class="flex items-center justify-center rounded text-blue"
+      class="flex items-center justify-center rounded-full text-blue"
     >
       30%
     </label>
@@ -119,7 +119,7 @@
     >
     <span
       id="amplify-impact-section--custom-amount-input-wrapper"
-      class="border rounded focus-outline"
+      class="border rounded-full focus-outline"
     >
       $
       <input
@@ -206,6 +206,14 @@
       formController.setTipValues(selectedAmount, "percentage");
       $("#amplify-impact-section--custom-amount-input").value = "";
       $("#amplify-impact-section--custom-amount").classList.remove("validate");
+    }
+
+    static hide() {
+      hide("#amplify-impact-section");
+    }
+
+    static show() {
+      showBlock("#amplify-impact-section");
     }
   }
 </script>
