--- a/frontend/src/donation-frequency-section.html
+++ b/frontend/src/donation-frequency-section.html
@@ -1,6 +1,46 @@
 <style>
   #donation-frequency-section {
     display: none;
+
+     .speech-bubble {
+            position: relative;
+            background: transparent;
+            border: 2px solid var(--eaa-blue-200);
+            border-radius: 10px;
+            padding: 8px 12px;
+            text-align: center;
+            color: #333;
+            background-color: var(--eaa-blue-100);
+
+            margin: 0 auto;
+        }
+        
+        .speech-bubble:after {
+            content: '';
+            position: absolute;
+            top: -10px;
+            left:75%;
+            margin-left: -10px;
+            border-width: 10px 10px 0;
+            border-style: solid;
+            border-color: var(--eaa-blue-200) transparent transparent transparent;
+            rotate: 180deg;
+            background: transparent;
+        }
+        
+        .speech-bubble:before {
+            content: '';
+            position: absolute;
+            top: -7px;
+            left: 75%;
+            margin-left: -7px;
+            border-width: 7px 7px 0;
+            border-style: solid;
+            border-color: var(--eaa-blue-100) transparent transparent;
+            z-index: 1;
+            rotate: 180deg;
+            background: transparent;
+        }
   }
 </style>
 
@@ -16,7 +56,7 @@
       onclick="DonationFrequencySection.handleFrequencyChange(event)"
       checked
     />
-    <label for="donation-frequency-section--one-time" class="rounded text-blue"> One time </label>
+    <label for="donation-frequency-section--one-time" class="rounded-full text-blue"> One time </label>
     <input
       type="radio"
       id="donation-frequency-section--monthly"
@@ -24,7 +64,10 @@
       onclick="DonationFrequencySection.handleFrequencyChange(event)"
       value="monthly"
     />
-    <label for="donation-frequency-section--monthly" class="rounded text-blue"> Monthly </label>
+    <label for="donation-frequency-section--monthly" class="rounded-full text-blue"> Monthly </label>
+  </div>
+  <div class="speech-bubble">
+    Giving regularly has a greater impact
   </div>
 </section>
 
@@ -37,6 +80,14 @@
     static handleFrequencyChange(event) {
       const frequency = event.target.value;
       formController.setDonationFrequency(frequency);
+    }
+
+    static hide() {
+      hide("#donation-frequency-section");
+    }
+
+    static show() {
+      showBlock("#donation-frequency-section");
     }
   }
 </script>
