--- a/frontend/src/donation-frequency-section.html
+++ b/frontend/src/donation-frequency-section.html
@@ -11,15 +11,16 @@
             text-align: center;
             color: #333;
             background-color: var(--eaa-blue-100);
-
-            margin: 0 auto;
+            max-width: 50%;
+            font-size: small;
+            margin-left: auto;
         }
         
         .speech-bubble:after {
             content: '';
             position: absolute;
             top: -10px;
-            left:75%;
+            left:50%;
             margin-left: -10px;
             border-width: 10px 10px 0;
             border-style: solid;
@@ -32,7 +33,7 @@
             content: '';
             position: absolute;
             top: -7px;
-            left: 75%;
+            left: 50%;
             margin-left: -7px;
             border-width: 7px 7px 0;
             border-style: solid;
@@ -40,6 +41,18 @@
             z-index: 1;
             rotate: 180deg;
             background: transparent;
+        }
+
+        @media screen and (max-width: 480px) {
+          .speech-bubble {
+            max-width: 100%;
+          }
+          .speech-bubble:after {
+              left: 75%;
+          }
+          .speech-bubble:before {
+              left: 75%;
+          }
         }
   }
 </style>
