Update add flex-wrap class

--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -6,7 +6,7 @@
 
 <section id="allocation-section">
   <h2 class="text-lg mt-8">I would like my gift to go to</h2>
-  <div class="radio-group flex gap-2 mb-4">
+  <div class="radio-group flex flex-wrap gap-2 mb-4">
     <input
       type="radio"
       id="allocation-section--default-allocation"
