Donation form updates

--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -31,8 +31,7 @@
     </label>
   </div>
   <p class="text-sm">
-    <sup>✧</sup> According to our evaluations. We select the most effective charities each quarter
-    based on evidence and need. You can read more about how we evaluate
+    <sup>✧</sup> Known as our Top Charities Fund. We select the most effective charities each quarter based on evidence and need. You can read more about how we evaluate
     charities
     <a href="https://effectivealtruism.org.au/evaluating-charities/">here</a>.
   </p>
