--- a/frontend/src/thankyou-section.html
+++ b/frontend/src/thankyou-section.html
@@ -8,10 +8,43 @@
   <h2>Thank you!</h2>
   <p>Your receipt will be sent to your email address.</p>
 
+  <div style="
+    background-color: var(--eaa-blue-100);
+    border: 2px solid var(--eaa-blue-200);
+    border-radius: 8px;
+    padding: 20px;
+    margin: 20px 0;
+    text-align: center;
+  ">
+    <a
+      href="https://forms.gle/qNKpAdyi3i6bZa5v9"
+      target="_blank"
+      rel="noopener noreferrer"
+      style="
+        display: inline-block;
+        background-color: var(--eaa-blue-600);
+        color: white;
+        padding: 12px 24px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        font-size: 16px;
+        transition: background-color 0.2s;
+      "
+      onmouseover="this.style.backgroundColor='var(--eaa-blue-700)'"
+      onmouseout="this.style.backgroundColor='var(--eaa-blue-600)'"
+    >Take Our 60 Second Survey</a>
+    <p>
+      Your feedback will help us grow our impact and better serve donors like you.
+    </p>
+  </div>
+
+
   <h3>Any questions?</h3>
 
   <p>
-    Please email us at <strong><a href="mailto:info@eaa.org.au">info@eaa.org.au</a></strong> or
+    Please email us at
+    <strong><a href="mailto:info@eaa.org.au">info@eaa.org.au</a></strong> or
     call us on <strong>+61 492 841 596</strong>, if you have any questions.
   </p>
 
