Update amplify wording

--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -32,7 +32,7 @@
 </style>
 
 <section id="amplify-impact-section">
-  <h2 class="text-lg">Amplify my impact</h2>
+  <h2 class="text-lg">Support our work</h2>
   <p>I would like to add:</p>
   <div class="radio-group flex gap-2 flex-wrap">
     <input
@@ -135,7 +135,7 @@
     </span>
   </div>
   <p class="mb-1">
-    To grow Effective Altruism Australia's work
+    $1 donated raises $5-$8 for partner charities
     <button
       class="more-info-button"
       type="button"
@@ -145,10 +145,10 @@
     </button>
   </p>
   <div popover id="amplify-impact-section--message-info">
-    EA Australia is on a mission to help Australians tackle the world’s most
-    pressing problems. We have big plans to reach more people, improve our
-    infrastructure, and grow our community. With your support, we can move more
-    donations to high impact causes.
+    EA Australia helps introduce more people to effective charities, and the
+    ideas of effective altruism. Your support of our operations helps us grow,
+    and collectively grow our impact. Learn more about our transparent impact
+    evaluation for 2022-2024.
   </div>
 </section>
 
