Add link to blog post on multiplier effects

--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -147,8 +147,12 @@
   <div popover id="amplify-impact-section--message-info">
     EA Australia helps introduce more people to effective charities, and the
     ideas of effective altruism. Your support of our operations helps us grow,
-    and collectively grow our impact. Learn more about our transparent impact
-    evaluation for 2022-2024.
+    and collectively grow our impact.
+    <a
+      href="https://effectivealtruism.org.au/we-help-others-give-better-but-how-effective-is-that/"
+      >Learn more</a
+    >
+    about our transparent impact evaluation for 2022-2024.
   </div>
 </section>
 
