--- a/frontend/src/payment-method-section.html
+++ b/frontend/src/payment-method-section.html
@@ -7,7 +7,7 @@
 <section id="payment-method-section">
   <h2 class="text-lg mt-8">Payment Method</h2>
 
-  <div class="radio-group flex gap-2">
+  <div class="radio-group flex flex-wrap gap-2">
     <input
       type="radio"
       id="payment-method-section--credit-card"
